--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -79,7 +79,7 @@
       </form>
     </mat-card-content>
     <mat-card-footer>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 </div>
